# EmojiFonts

./: .gitignore  APPLE_FONTS.md  CAVEATS.md  COMPATIBILITY.md  FONTS.md  LICENSE  QUICKSTART.md  README.md  TODO.md  apple-prepare.sh  apple.py  apple.sh  blobmoji.py  blobmoji.sh  clean.sh  compat.sh  convert_to_emjc.sh  emjc.py  emjc_encoder.py  extractor.py  facebook-fetch.php  facebook.py  facebook.sh  fluentui-prepare.py  fluentui.py  fluentui.sh  generate-twemoji-png.sh  get-assets.sh  get-fonts.sh  image-sizes.sh  joypixels.py  joypixels.sh  noto-emoji.py  noto-emoji.sh  oneui.py  oneui.sh  openmoji.py  openmoji.sh  otf2otc.py  prepare.sh  (+19 more)
blobmoji/: blobmoji-noto.py  blobmoji-noto.sh  blobmoji.py  blobmoji.sh
blobmoji-extra/: gen-couple-heart.py  gen-couple-kiss.py  gen-couple-stand.py  gen-handshake.py  shared.py
blobmoji/extra/: shared.py
data/: shift_overrides.json
facebook/: facebook-native.py  facebook-native.sh  facebook.py  facebook.sh
fluentui/: fluentui.py  fluentui.sh
joypixels/: joypixels.py  joypixels.sh
noto-emoji/: noto-emoji.py  noto-emoji.sh
noto-emoji-cursed/: noto-emoji-cursed.py  noto-emoji-cursed.sh
noto-emoji-extra/: gen-couple-heart.py  gen-couple-kiss.py  gen-couple-stand.py  gen-handshake.py  shared.py
noto-emoji/extra/: gen-bunny-ears.py  gen-couple-heart.py  gen-couple-stand.py  gen-handshake.py  gen-wrestling.py  shared.py
oneui/: oneui.py  oneui.sh
openmoji/: openmoji.py  openmoji.sh
openmoji-extra/: gen-couple-heart.py  gen-couple-kiss.py  gen-couple-stand.py  gen-handshake.py  shared.py
openmoji/extra/: gen-couple-kiss.py  shared.py
templates/: semi-native.py  semi-native.sh
tests/: test_cli_tools.py
tossface/: tossface.py  tossface.sh
twemoji/: twemoji.py  twemoji.sh
twemoji-extra/: gen-couple-heart.py  gen-couple-kiss.py  gen-couple-stand.py  gen-handshake.py  shared.py
twemoji/extra/: gen-couple-kiss.py  gen-handshake.py  shared.py
whatsapp/: whatsapp-native.sh  whatsapp.py  whatsapp.sh
