[project]
name = "emojifonts"
version = "1.0.0"
description = "Backports and themes AppleColorEmoji font."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "afdko>=4.0.3",
    "fonttools[repacker]>=4.61.1",
    "pillow>=12.1.1",
    "pyliblzfse>=0.4.1",
    "pytest-cov>=7.0.0",
]

[project.scripts]
emojifonts-apple = "apple:main"
emojifonts-extract = "extractor:main"
emojifonts-remove-class3 = "remove_class3:main"
emojifonts-shift-multi = "shift_multi:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.2",
]

[tool.setuptools]
py-modules = ["apple", "extractor", "remove_class3", "shift_multi", "shared", "shared_lig", "emjc", "emjc_exp"]

[tool.uv]
package = true
default-groups = ["dev"]

[tool.ruff]
target-version = "py311"
line-length = 120
extend-exclude = [
    "apple/AppleColorEmoji*",
    "blobmoji/Blobmoji*.ttx",
    "common/AppleColorEmoji_iOS_*",
    "Fonts/",
    "noto-emoji/NotoColorEmoji.*",
    "twemoji/",
    "whatsapp/",
    "facebook/",
    "joypixels/",
    "openmoji/",
    "tossface/",
    "oneui/",
    "noto-emoji/",
    "templates/",
    "blobmoji/",
    "fluentui/",
    "noto-emoji-cursed/",
    "emojipedia-wip/",
]

[tool.ruff.lint]
select = ["E", "F", "B", "W", "UP", "I"]
ignore = []

[tool.ruff.format]
exclude = ["**/*.ttx", "**/*.ttc", "**/*.ttf"]
